--- a/public/css/login.css
+++ b/public/css/login.css
@@ -40,19 +40,21 @@ body{
 
 form{ width: 100%; }
 
-.form-box{
+.form-box {
     position: absolute;
-    right: 0;
+    top: 50%;
+    left: 75%;
+    transform: translate(-50%, -50%);
     width: 50%;
-    height: 100%;
+    height: auto;
     background: #fff;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    color: #333;
-    text-align: center;
+    justify-content: center;
     padding: 40px;
     z-index: 1;
-    transition: .6s ease-in-out 1.2s, visibility 0s 1s;
+    transition: all 0.6s ease;
 }
 
     .container.active .form-box{ right: 50%; }
